# apostol

./: .gitignore  README.md
back/: auth.py  database.py  dependencies.py  main.py  pyproject.toml
back/AI/: test.ipynb
back/schemas/: agents.py  users.py
backend/: .env  agents.db  chat_engine.py  database.py  document_loader.py  main.py  models.py  schemas.py  vdb.py
front/: bun.lockb  package-lock.json  package.json
front/src/: App.tsx  Auth.tsx  main.tsx
front/src/api/: axiosConfig.ts
front/src/components/: Dashboard.tsx  PDFViewer.tsx  Sidebar.tsx
front/src/types/: Agent.ts
