[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Petar Vuković <petarvukovic50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.31.1"
fastapi = "^0.115.0"
supabase = "^2.9.0"
load-dotenv = "^0.1.0"
bcrypt = "^4.2.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.12"
llama-cloud = "^0.1.4"
ipykernel = "^6.29.5"
llama-index-core = "^0.11.19"
llama-index-readers-file = "^0.2.2"
python-dotenv = "^1.0.1"
llama-parse = "^0.5.10"
llama-index-llms-openai = "^0.2.15"
llama-index-embeddings-openai = "^0.2.5"
asyncio = "^3.4.3"
nest-asyncio = "^1.6.0"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
